W0085: fix for not placing images as first element on mobile

--- a/wp-content/themes/eaurouge/styles/_responsive.scss
+++ b/wp-content/themes/eaurouge/styles/_responsive.scss
@@ -130,12 +130,12 @@
       }
     }
 
-    &.blocktype_with-image {
-      padding-top: 20vh;
+    &.blocktype_double-half {
+      padding-top: 22vh;
       position: relative;
 
       .block.image {
-        height: 20vh;
+        height: 22vh;
         width: 100%;
         position: absolute;
         top: 0px;
